--- a/css/goodsdetail.css
+++ b/css/goodsdetail.css
@@ -59,10 +59,12 @@ width: 50%;
 }
 .goodsdetail-switch{
 	background: #fff;
-	height: 2.1rem;
-	margin-top: 0.25rem;
+	height: 2.35rem;
+	/* margin-top: 0.25rem; */
 	font-size: 0.6rem;
 	border-bottom: 0.1rem solid #d1d1d1;
+	border-top: 0.25rem solid #d1d1d1;
+
 
 }
 .goodsdetail-switch-box{
@@ -155,3 +157,81 @@ width: 50%;
 .cc{
 	display: none
 }
+.goodsdetail-con-whole{
+	width: 10.8rem;
+	height: 1.6rem;
+	margin: 0 auto;
+	margin-top: 0.9rem;
+	margin-bottom: 0.6rem;
+	display: flex;
+	display: -webkit-flex;
+	justify-content: space-around;
+	align-items: center;
+}
+.goodsdetail-whole-lr{
+	display: flex;
+	display: -webkit-flex;
+	justify-content: space-around;
+	align-items: center;
+	width: 50%;
+	height: 100%;
+}
+.bor-r{
+      border-top-left-radius:0.1rem;
+      border-bottom-left-radius:0.1rem;
+      border:1px solid #8e8e8e;
+}
+.bor-l{
+      border-top-right-radius:0.1rem;
+      border-bottom-right-radius:0.1rem;
+      border:1px solid #8e8e8e;
+}
+
+.goodsdetail-active2{
+	border-top-left-radius:0.1rem;
+      border-bottom-left-radius:0.1rem;
+      border:1px solid red;
+}
+.whole>ul{
+	width:95%;
+	height: 100%;
+	margin: 0 auto;
+}
+.whole>ul>li{
+	border-bottom: 0.05rem solid #e9e9e9;
+	padding: 0.5rem 0;
+
+}
+.user-date{
+	display: flex;
+	display: -webkit-flex;
+	align-items: center;
+	width: 100%;
+}
+.user-data>p{
+	color: #1b1b1b;
+	font-size: 0.7rem;
+}
+.user-date>span:nth-child(1){
+	display: flex;
+	display: -webkit-flex;
+	align-items: center;
+	width: 50%;
+	font-size: 0.6rem;
+	color: #c1c1c1
+}
+.user-date>span:nth-child(2){
+	display: flex;
+	display: -webkit-flex;
+	align-items: center;
+	width: 50%;
+	justify-content:flex-end;
+	font-size: 0.6rem;
+	color: #c1c1c1
+}
+.goods-detail{
+	font-size: 0.6rem;
+	color: #c1c1c1
+}
+
+
