--- a/css/common1.css
+++ b/css/common1.css
@@ -1,7 +1,7 @@
 html,body{
 	font-family:'Microsoft Yahei','Simsun',Arial, Helvetica, sans-serif;
-	width: 100%;
-	height: 100%;
+	/*width: 100%;
+	height: 100%;*/
 	overflow-x: hidden;
 	overflow-y: scroll;
 	/* background-color: #fff; */
