--- a/css/extension.css
+++ b/css/extension.css
@@ -1,7 +1,9 @@
+html, body{
+	width: 100%;
+	height: 100%;
+}
 .my-index-box{
     background: #f0f0f0;
-    width: 100%;
-    height: 100%;
 }
 /* 分享 */
 .my-share{
@@ -67,3 +69,15 @@
 	border-bottom: 1px solid #f0f0f0;
 	font-size: 0.65rem;
 }
+
+
+
+
+
+
+
+
+
+
+
+
