--- a/css/common.css
+++ b/css/common.css
@@ -146,7 +146,7 @@ footer{
 
 /*重置首页列表数据*/
 .index-shop-benefit>p,.index-shop-pin>p,span{
-    font-size: 0.65rem;
+    /*font-size: 0.65rem;*/
     color: #5f5f5f;
 }
 .index-shop-benefit>span{
