--- a/css/lessstyle.css
+++ b/css/lessstyle.css
@@ -250,10 +250,10 @@ width: 25%;
 
 /* 关于我们 */
 
-.aboutus-box{
+/*.aboutus-box{
 	width: 100%;
 	height: 100%;
-}
+}*/
 .aboutus-box>ul{
 	margin-top: 2.5rem;
 	width: 100%;
