--- a/css/goodsdetail.css
+++ b/css/goodsdetail.css
@@ -59,6 +59,8 @@ align-items: center;
 width: 50%;
 
 }
+/*<!--详情和评价切换-->*/
+
 .goodsdetail-switch{
 	background: #fff;
 	height: 2.35rem;
@@ -108,6 +110,9 @@ width: 50%;
 	align-items: center;
 	width: 50%;
 }
+
+/*底部购物车*/
+
 .goodsdetail-footer{
 	position: fixed;
 	left: 0;
@@ -151,6 +156,8 @@ width: 50%;
 	width: 35%;
 	background: #f1f1f1;
 }
+/*<!--详情和评价具体内容-->*/
+
 .goodsdetail-con>div{
 	width: 100%;
 	height: 100%;
