--- a/css/common.css
+++ b/css/common.css
@@ -58,6 +58,7 @@ footer{
 
 /*微信群发*/
 .wxmass-sends{
+
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,.5);
@@ -67,7 +68,7 @@ footer{
     display: none;
 }
 .wxmass-sends-item{
-    width: 16.75rem;
+    width: 90%;
     height: 16.45rem;
     background-color: #fff;
     position: fixed;
