--- a/css/common.css
+++ b/css/common.css
@@ -58,6 +58,7 @@ footer{
 
 /*微信群发*/
 .wxmass-sends{
+
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,.5);
@@ -67,10 +68,10 @@ footer{
     display: none;
 }
 .wxmass-sends-item{
-    width: 16.75rem;
+    width: 90%;
     height: 16.45rem;
     background-color: #fff;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
@@ -167,11 +168,21 @@ footer{
     color: #fff;
 
 }
-
+.default-height{
+    width: 100%;
+    height: 2.5rem;
+    line-height: 2.5rem;
+}
 .loading,.no-info{
     font-size: 0.7rem;
     text-align: center;
     display: none;
     
 }
+.display-box{
+    display: -webkit-box;
+    display: -moz-box;
+    display: box;
+}
+
 
