--- a/css/common.css
+++ b/css/common.css
@@ -25,6 +25,13 @@ footer{
     justify-content: space-around;
     border-top: 0.05rem solid #cdcdcd;
 }
+img {
+    margin: 0;
+    padding: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+}
 #footer>a{
     width: 20%;
 }
