--- a/css/goodsdetail.css
+++ b/css/goodsdetail.css
@@ -63,7 +63,7 @@ width: 50%;
 
 .goodsdetail-switch{
 	background: #fff;
-	height: 2.35rem;
+	height: 3rem;
 	/* margin-top: 0.25rem; */
 	font-size: 0.6rem;
 	border-bottom: 0.1rem solid #d1d1d1;
@@ -72,8 +72,8 @@ width: 50%;
 
 }
 .goodsdetail-switch-box{
-	width: 40%;
-	height: 2.0rem;
+	width: 58%;
+	height: 2.7rem;
 	margin: 0 auto;
 	display: flex;
 	display: -webkit-flex;
@@ -93,7 +93,7 @@ width: 50%;
 	border-bottom:0.1rem solid #f23030;
 }
 .ab{
-	font-size: 0.6rem;
+	font-size: 0.9rem;
 	color: #1b1b1b;
 }
 .goodsdetail-sw-left{
@@ -167,7 +167,7 @@ width: 50%;
 	display: none
 }
 .goodsdetail-con-whole{
-	width: 10.8rem;
+	width: 9.8rem;
 	height: 1.6rem;
 	margin: 0 auto;
 	margin-top: 0.9rem;
@@ -261,6 +261,30 @@ width: 50%;
 }
 nav,.aui-slide3,.bg-dark>img,.aui-slide-wrap{
 	height: 17.0rem;
+}
+.img-box{
+	/*content:'';*/
+	/*display:block;*/
+	/*clear:both;*/
+	/*height:0;*/
+	/*overflow:hidden;*/
+	display: flex;
+	display: -webkit-flex;
+	/*justify-content: space-around;*/
+	justify-content: flex-start;
+	align-items: center;
+	width: 100%;
+}
+
+.passImg-detail-img{
+	width: 3.5rem;
+	height: 3.5rem;
+	margin-right: 0.25rem;
+	float: left;
+}
+.passImg-detail-img>img{
+	width: 100%;
+	height:100%;
 }
 
 
