--- a/css/common.css
+++ b/css/common.css
@@ -191,5 +191,13 @@ img {
     display: -moz-box;
     display: box;
 }
+.no-teacher{
+    width: 100%;
+    height: 2rem;
+    font-size: 0.7rem;
+    padding-left: 1rem;
+    margin-top: 1rem;
+    color: #d1d1d1;
 
+}
 
