--- a/css/extension.css
+++ b/css/extension.css
@@ -74,8 +74,17 @@ html, body{
 	width: 100%;
 	height: 8.0rem;
 }
+.gonggao-img{
+	width: 23px;
+	height: 14px;
 
-
+}
+.gonggao-box{
+	display: flex;
+	display: -webkit-flex;
+	justify-content: center;
+	align-items: center;
+}
 
 
 
