--- a/css/transuccess.css
+++ b/css/transuccess.css
@@ -1,6 +1,4 @@
 html,body{
-    width: 100%;
-    height: 100%;
     overflow-x: hidden;
     overflow-y: scroll;
 }
@@ -54,3 +52,11 @@ html,body{
     width: 100%;
     height: 100%;
 }
+.dis-shop-detail{
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+}
+
+
