--- a/css/common.css
+++ b/css/common.css
@@ -65,7 +65,6 @@ img {
 
 /*微信群发*/
 .wxmass-sends{
-
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,.5);
@@ -198,6 +197,26 @@ img {
     padding-left: 1rem;
     margin-top: 1rem;
     color: #d1d1d1;
-
 }
+.mask{
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.31);
+    z-index: 8;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
+.dis-shop-detail{
+
+    overflow : hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+
 
