--- a/css/myshop.css
+++ b/css/myshop.css
@@ -1,8 +1,11 @@
 html,body{
-    width: 100%;
-    height: 100%;
+    /*width: 100%;
+    height: 100%;*/
     overflow-x: hidden;
     overflow-y: scroll;
+    overflow-scrolling: touch;
+    -webkit-overflow-scrolling: touch;
+    position: relative;
 }
 header{
     width: 100%;
@@ -91,11 +94,12 @@ nav{
     width: 100%;
     height: 10.0rem;
     background-color: #fff;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     padding-top: 1.5rem;
-    display: none
+    display: none;
+    z-index: 10;
 }
 .my-share>ul{
     display: -webkit-flex;
