--- a/css/common.css
+++ b/css/common.css
@@ -67,7 +67,7 @@ img {
 .wxmass-sends{
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,.5);
+    background-color: rgba(0, 0, 0, 0.51);
     position: absolute;
     top: 0;
     left: 0;
