--- a/css/common1.css
+++ b/css/common1.css
@@ -221,7 +221,7 @@ select{
 .dis-screen{
 	padding: 0.5rem;
 	width: 100%;
-	height: 11rem;
+	/*height: 11rem;*/
 	background-color: #fff;
 	position: absolute;
 	top: 1.75rem;
