--- a/css/common.css
+++ b/css/common.css
@@ -219,4 +219,27 @@ img {
 }
 
 
+/* 分享时的loading图 */
+.share-loading{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.51);
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+}
+.share-loading>img{
+    width: 90%;
+    height: 16.45rem;
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    border-radius: 0.25rem;
+}
+
 
