处理详情页图片尺寸问题，处理我的商品页面进入详情页跳转-解决

--- a/css/goodsdetail.css
+++ b/css/goodsdetail.css
@@ -259,9 +259,9 @@ width: 50%;
 	overflow: hidden;
 	line-height: 1.5rem;
 }
-nav,.aui-slide3,.bg-dark>img,.aui-slide-wrap{
+/*nav,.aui-slide3,.bg-dark>img,.aui-slide-wrap{
 	height: 17.0rem;
-}
+}*/
 .img-box{
 	/*content:'';*/
 	/*display:block;*/
