修改个人中心样式

--- a/css/my.css
+++ b/css/my.css
@@ -80,7 +80,7 @@ nav{
 	justify-content: space-around;
 	align-items: center;
 	height: 3.5rem;
-
+	padding: 0 1.5rem;
 }
 
 .member-order-list>.li-bor{
