--- a/css/common.css
+++ b/css/common.css
@@ -75,7 +75,7 @@ img {
 }
 .wxmass-sends-item{
     width: 90%;
-    height: 16.45rem;
+    height: 14.25rem;
     background-color: #fff;
     position: fixed;
     top: 0;
@@ -129,7 +129,10 @@ img {
     width: 100%;
     position: relative
 }
-.wxmass-item-list>li:not(.no-border){
+/*.wxmass-item-list>li:not(.no-border){
+    border-bottom:0.1rem solid #e9e9e9;
+}*/
+.share-firends{
     border-bottom:0.1rem solid #e9e9e9;
 }
 .wxmass-item-list-img{
