--- a/css/my.css
+++ b/css/my.css
@@ -173,7 +173,7 @@ nav{
 	align-items: center;
 	width: 10%;
 }
-.bind-phone{
+#bind-phone{
 	padding: 0.1rem 0.5rem;
 	border: 1px solid #fff;
 	color: #fff;
