--- a/css/common.css
+++ b/css/common.css
@@ -76,7 +76,7 @@ img {
 .wxmass-sends-item{
     width: 90%;
     height: 14.25rem;
-    background-color: #fff;
+    /*background-color: #fff;*/
     position: fixed;
     top: 0;
     left: 0;
@@ -84,6 +84,8 @@ img {
     bottom: 0;
     margin: auto;
     border-radius: 0.25rem;
+    background: #fff;
+    z-index: 100004;
 }
 .wxmass-item-title{
     width: 100%;
@@ -117,7 +119,7 @@ img {
 }
 .wxmass-item-list{
     width: 100%;
-    height: 6.75rem;
+    /*background: #fff;*/
 
 }
 .wxmass-item-list>li{
@@ -231,6 +233,7 @@ img {
     top: 0;
     left: 0;
     display: none;
+    z-index: 100000;
 }
 .share-loading>img{
     width: 90%;
