--- a/css/my.css
+++ b/css/my.css
@@ -6,9 +6,11 @@ html,body{
 header{
 	width: 100%;
 	height: 8.75rem;
-	background-color: rgb(253, 99, 21);
 	margin-bottom: 0.25rem;
 	padding-top: 0.5rem;
+	background-image: url("../images/member_bgm.png");
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
 }
 nav{
 	font-size: 0.7rem;
