--- a/css/common.css
+++ b/css/common.css
@@ -248,4 +248,42 @@ img {
     border-radius: 0.25rem;
 }
 
+/* 修改昵称 */
+.userNameInput1{
+    width: 100%;
+    height: 1.5rem;
+    line-height: 1.5rem;
+    display: flex;
+    display: -webkit-flex;
+    justify-content: center;
+    align-items: center;
+}
+.userNameInput2{
+    display: flex;
+    display: -webkit-flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.confirm-button{
+    font-size: 0.7rem;
+    color: #fff;
+    background-color: #f23030;
+    border-radius: 0.2rem;
+    padding: 0.1rem 0.2rem;
+}
+.userName1{
+    color: #fff !important;
+    width: 50% !important;
+    padding-left: 0.5rem !important;
+    min-height: 1.0rem !important;
+    background-color: #f99969 !important;
+    border-radius: 0.2rem !important; 
+}
 
+.xg1{
+    width: 1rem;
+    height: 1rem;
+    background: url("../images/xg1.png")no-repeat;
+    display: inline-block;
+    background-size: cover;
+}
