--- a/css/my.css
+++ b/css/my.css
@@ -47,7 +47,7 @@ nav{
 	font-size: 0.9rem;
 	position: relative;
 }
-.xg1{
+/* .xg1{
 	width: 1rem;
 	height: 1rem;
 	display: inline-block;
@@ -56,7 +56,7 @@ nav{
 	position: absolute;
 	top: 0.1rem;
 	left: 60%;
-}
+} */
 .member-info>.userPhone{
 	margin: 0.3rem 0;
 	text-align: center;
@@ -155,19 +155,18 @@ nav{
 .userNameInput2{
 	display: flex;
 	display: -webkit-flex;
-	justify-content: flex-start;
+	justify-content: space-around;
 	align-items: center;
 	width: 100%;
-	margin-left: 3rem;
 	margin-top: 0.3rem;
 }
-.userNameInput2>input:nth-child(1){
+/* .userNameInput2>input:nth-child(1){
 	display: flex;
 	display: -webkit-flex;
 	justify-content: flex-start;
 	align-items: center;
 	width: 50%;
-}
+} */
 .userNameInput2>input:nth-child(2){
 	display: flex;
 	display: -webkit-flex;
