--- a/css/homeCommon.css
+++ b/css/homeCommon.css
@@ -433,15 +433,16 @@ select{
 	display: -webkit-flex;
 	flex-direction: row;
 	justify-content: space-between;
-	padding: 0.5rem 0;
+	padding: 0.5rem;
 	border-bottom: 0.05rem solid #ccc;
 }
 .dis-shop-img{
-	height: 6.1rem;
+	height: 6.15rem;
+	width: 6.15rem;
 }
 .dis-shop-img>img{
-	width: 7.95rem;
-	height: 6.1rem;
+	width: 100%;
+	height: 100%;
 	margin-right: 0.5rem;
 	object-fit: fill;
 }
@@ -737,7 +738,7 @@ select{
 	display: inline-block;
 }
 .dis-list-content{
-	width: 55%;
+	width: 60%;
 }
 
 /*搜索框*/
