--- a/css/myshop.css
+++ b/css/myshop.css
@@ -71,9 +71,10 @@ nav{
 .dis-del-sale{
     display: flex;
     display: -webkit-flex;
-    /*justify-content: space-around;*/
+    justify-content: space-between;
     align-items: center;
     width: 100%;
+    padding-right: 1.0rem;
 
 }
 .dis-del{
@@ -340,6 +341,8 @@ align-items: center;
     height: 4.5rem;
     margin: 0 auto;
 }
-
+.now-tuiguang{
+    margin-right: 0;
+}
 
 
