--- a/css/index.css
+++ b/css/index.css
@@ -37,7 +37,13 @@
 	margin: 0.25rem 0;
 
 }
-
+#search-input {
+	outline: none;
+	position: absolute;
+	top: 0;
+	left: 1.3rem;
+	background: #fff!important;
+}
 
 
 
