--- a/css/common.css
+++ b/css/common.css
@@ -282,7 +282,7 @@ img {
 .xg1{
     width: 1rem;
     height: 1rem;
-    background: url("../images/xg1.png")no-repeat;
+    background: url("../images/penpal.png")no-repeat;
     display: inline-block;
     background-size: cover;
 }
