--- a/css/common1.css
+++ b/css/common1.css
@@ -462,6 +462,7 @@ select{
 .dis-price>span:nth-child(2){
 	color: #1b1b1b;
 	font-size: 0.6rem;
+	text-decoration: line-through;
 	/* float: right;
 	margin-right: 1.5rem; */
 }
