--- a/css/myshop.css
+++ b/css/myshop.css
@@ -7,7 +7,7 @@ html,body{
     -webkit-overflow-scrolling: touch;
     position: relative;
 }
-header{
+#header-box{
     width: 100%;
     height: 5.5rem;
     background-color: rgb(253, 99, 21);
