--- a/css/myshop.css
+++ b/css/myshop.css
@@ -7,10 +7,13 @@ html,body{
     -webkit-overflow-scrolling: touch;
     position: relative;
 }
+header{
+    box-shadow: 1px 0px 2px #888888;
+}
 #header-box{
     width: 100%;
     height: 5.5rem;
-    background-color: rgb(253, 99, 21);
+    background-color: #f23030;
     display: flex;
     display: -webkit-flex;
     flex-direction: row;
