--- a/css/common.css
+++ b/css/common.css
@@ -76,7 +76,7 @@ img {
 .wxmass-sends-item{
     width: 90%;
     /* height: 14.25rem; */
-    height: 7rem;
+    height: 12rem;
     /*background-color: #fff;*/
     position: fixed;
     top: 0;
@@ -130,14 +130,17 @@ img {
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    position: relative
+    position: relative;
+    padding: 0 0.5rem;
+    border-bottom: 0.1rem solid #e9e9e9;
+}
+.wxmass-item-list>li:last-child{
+    border-bottom: none;
 }
 /*.wxmass-item-list>li:not(.no-border){
     border-bottom:0.1rem solid #e9e9e9;
 }*/
-.share-firends{
-    border-bottom:0.1rem solid #e9e9e9;
-}
+
 .wxmass-item-list-img{
     width: 1.0rem;
     height: 1.0rem;
