--- a/css/lessstyle.css
+++ b/css/lessstyle.css
@@ -210,38 +210,37 @@ html,body{
 .myteam-info-list>li:nth-child(1){
 	background-color: #f0f0f0;
 	font-size: 0.6rem;
+	border-bottom: none;
 }
 .myteam-info-list>li{
 	/* background-color: #f0f0f0; */
 	font-size: 0.6rem;
-	
 }
 .myteam-info-list>li>a{
-border-bottom: 0.1rem solid #e9e9e9;
+	border-bottom: 0.1rem solid #e9e9e9;
 }
-
-
 
 .myteam-info-list>li:nth-child(1)>a{
 	display: flex;
-display: -webkit-flex;
-justify-content: space-around;
-align-items: center;
-width: 100%;
+	display: -webkit-flex;
+	justify-content: space-around;
+	align-items: center;
+	width: 100%;
+	border-bottom: none;
 }
 .myteam-info-list>li:nth-child(1)>a>span{
 	display: flex;
-display: -webkit-flex;
-justify-content: space-around;
-align-items: center;
-width: 25%;
+	display: -webkit-flex;
+	justify-content: space-around;
+	align-items: center;
+	width: 25%;
 }
 .myteam-info-list>li>a>span{
 	display: flex;
-display: -webkit-flex;
-justify-content: space-around;
-align-items: center;
-width: 25%;
+	display: -webkit-flex;
+	justify-content: space-around;
+	align-items: center;
+	width: 25%;
 }
 
 /* 关于我们 */
@@ -307,7 +306,10 @@ width: 25%;
 	font-size: 0.65rem;
 	color: #1b1b1b;
 }
-
+#notice-title{
+	text-align: center;
+	font-size: 16px;
+}
 
 
 
