--- a/css/my.css
+++ b/css/my.css
@@ -96,7 +96,7 @@ nav{
 .member-order{
 	background-color: #fff;
 	width: 100%;
-	height: 3.5rem;
+	height: 4.25rem;
 	margin-bottom: 0.25rem;
 }
 .member-order-title{
@@ -112,7 +112,7 @@ nav{
 	justify-content: space-around;
 	align-items: center;
 	width: 100%;
-	height: 3.5rem;
+	height: 4rem;
 }
 .member-order-list>li{
 	font-size: 0.6rem;
@@ -121,8 +121,9 @@ nav{
 	display: flex;
 	display: -webkit-flex;
 	justify-content: space-around;
+	flex-direction: column;
 	align-items: center;
-	height: 3.5rem;
+	height: 4rem;
 	padding: 0 1.5rem;
 }
 
@@ -130,24 +131,26 @@ nav{
 	border-right: 1px solid #e9e9e9;
 }
 .e9-color{
-	color: #b1b1b1;
+
+	color: #141414;
+	font-size: 0.7rem;
 }
 .member-info-entry{
 	width: 100%;
 	background-color: #fff;
 }
 .three{
-	width: 1.0rem;
-	height: 0.85rem;
-	background: url('../images/33.png')no-repeat;
+	width: 2.5rem;
+	height: 2.5rem;
+	background: url('../images/none-sale.png')no-repeat;
 	background-size: cover;
 
 
 }
 .four{
-	width: 1.0rem;
-	height: 0.85rem;
-	background: url('../images/44.png')no-repeat;
+	width: 2.5rem;
+	height: 2.5rem;
+	background: url('../images/invite_come.png')no-repeat;
 	background-size: cover;
 }
 
@@ -181,7 +184,9 @@ nav{
 	font-size: 0.7rem !important;
 
 }
-
+.member-info-list>li:nth-child(1){
+	border-top: 0.05rem solid #ccc;
+}
 
 
 
