--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,7 @@
     color: #5f5f5f;
     font-size: 0.6rem;
     margin: 0.25rem 0;
-    text-decoration: none;
+    text-decoration: line-through;
 }
 .zhuan{
 	color: #f23030;
@@ -72,7 +72,12 @@
 .home-three-box{
 	position: relative;
 }
-
+.dis-evaluate>span:nth-child(1) {
+	width: 46%;
+	font-size: 0.65rem;
+	color: #ff0000;
+	font-weight: bold;
+}
 
 
 
