--- a/css/homePage.css
+++ b/css/homePage.css
@@ -19,6 +19,100 @@ header{
 }
 
 
+/*微信群发*/
+.wxmass-sends{
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.51);
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: none;
+}
+.wxmass-sends-item{
+	width: 90%;
+	height: 8rem;
+	/*height: 12rem;*/
+	/*background-color: #fff;*/
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	margin: auto;
+	border-radius: 0.25rem;
+	background: #fff;
+	z-index: 100004;
+}
+.wxmass-item-title{
+	width: 100%;
+	height: 2.25rem;
+	display: flex;
+	display: -webkit-flex;
+	/* justify-content: space-around; */
+	align-items: center;
+	width: 100%;
+}
+.wxmass-item-title>span:nth-child(1){
+	margin-left: 0.75rem;
+	color: #f33838;
+}
+.wxmass-item-title>span:nth-child(2){
+	display: flex;
+	display: -webkit-flex;
+	justify-content: space-around;
+	align-items: center;
+	width: 80%;
+	font-size: 0.8rem;
+	color: #1b1b1b;
+}
+.wxmass-item-img{
+	width: 100%;
+	height: 7.5rem;
+}
+.wxmass-item-img>img{
+	width: 100%;
+	height: 100%;
+}
+.wxmass-item-list{
+	width: 100%;
+	/*background: #fff;*/
+
+}
+.wxmass-item-list>li{
+	height: 2.25rem;
+	display: flex;
+	display: -webkit-flex;
+	justify-content: flex-start;
+	align-items: center;
+	width: 100%;
+	position: relative;
+	padding: 0 0.5rem;
+	border-bottom: 0.1rem solid #e9e9e9;
+}
+.wxmass-item-list>li:last-child{
+	border-bottom: none;
+}
+/*.wxmass-item-list>li:not(.no-border){
+    border-bottom:0.1rem solid #e9e9e9;
+}*/
+
+.wxmass-item-list-img{
+	width: 1.0rem;
+	height: 1.0rem;
+	margin: 0 1.0rem;
+}
+.wxmass-item-list-img>img{
+	width: 100%;
+	height: 100%;
+}
+.wxmass-col-xs-3{
+	position: absolute;
+	top: 0.42rem;
+	right: 0;
+	width: 10%
+}
+
 
 
 
