--- a/css/common1.css
+++ b/css/common1.css
@@ -204,7 +204,7 @@ a:link,a:visited,a:hover,a:active{
 	justify-content: space-around;
 	align-items: center;
 	margin-bottom: 0.25rem;
-	position: relative;
+	/*position: relative;*/
 	font-size: 0.7rem;
 }
 .dis-select-box>select:first-child{
@@ -221,14 +221,16 @@ select{
 .dis-screen{
 	padding: 0.5rem;
 	width: 100%;
-	/*height: 11rem;*/
+	height: 16rem;
 	background-color: #fff;
 	position: absolute;
-	top: 1.75rem;
+	top: 4.5rem;
 	left: 0;
 	font-size: 0.65rem;
 	display: none;
-	z-index: 10;
+	z-index: 9999;
+	border-bottom: 1px solid #ddd;
+	box-shadow: 0px 5px 20px 0px rgba(67, 67, 67, 0.42);
 }
 .dis-screen-active{
 	color: #f23030;
@@ -580,21 +582,21 @@ select{
 }
 .member-withdraw:after,.member-info-list>li:after{
 	content: '';
-    width: 0.5rem;
-    height: 0.5rem;
-    position: absolute;
-    top: 50%;
-    right: 0.75rem;
-    margin-top: -0.2rem;
-    background: transparent;
-    border: 1px solid #1c1c1c;
-    border-top: none;
-    border-right: none;
-    z-index: 2;
-    -webkit-border-radius: 0;
-    border-radius: 0;
-    -webkit-transform: rotate(-135deg);
-    transform: rotate(-135deg);
+	width: 6px;
+	height: 6px;
+	position: absolute;
+	top: 50%;
+	right: 0.75rem;
+	margin-top: -3px;
+	background: transparent;
+	border: 1px solid #1c1c1c;
+	border-top: none;
+	border-right: none;
+	z-index: 2;
+	-webkit-border-radius: 0;
+	border-radius: 0;
+	-webkit-transform: rotate(-135deg);
+	transform: rotate(-135deg);
 }
 
 .search-form{
