--- a/css/homeCommon.css
+++ b/css/homeCommon.css
@@ -53,7 +53,7 @@ header a {
     background-color: #f23030;
 }
 .aui-searchbar-input {
-    margin: 0 0.3rem 0 0.5rem;
+    margin: 0 .3rem 0 .5rem;
 }
 .aui-searchbar .aui-searchbar-cancel{
     color: #fff;
