--- a/css/goodsdetail.css
+++ b/css/goodsdetail.css
@@ -292,5 +292,9 @@ width: 50%;
 	height: 100%;
 	margin: 0 auto;
 }
+.chooseimg>ul>li {
+	border-bottom: 0.05rem solid #e9e9e9;
+	padding: 0.5rem 0;
+}
 
 
