--- a/css/discountMall.css
+++ b/css/discountMall.css
@@ -72,8 +72,21 @@
 	font-weight: bold;
 }
 
-
-
+/*空出状态栏样式*/
+.null-box{
+	width: 100%;
+	height: 1rem;
+	line-height: 1rem;
+	background-color: #f23030;
+}
+header{
+	position: fixed;
+	top: 0;
+	left: 0;
+}
+nav{
+	margin-top: 3rem;
+}
 
 
 
